# create_autonomy

./: .travis.yml  dependencies.repos  dependencies.txt
.github/: FUNDING.yml
ca_bringup/: package.xml
ca_bringup/launch/: complete.launch  minimal.launch  minimal2.launch
ca_bumper2pc/: CMakeLists.txt
ca_description/launch/: create_description.launch
ca_description/urdf/: create_base.xacro  create_base_gazebo.xacro
ca_description/urdf/sensors/lasers/: d435.xacro
ca_driver/config/: default.yaml
ca_gazebo/: CMakeLists.txt  package.xml
ca_gazebo/launch/: create_empty_world.launch  create_sweet_house_3.launch  create_sweet_house_5.launch
ca_gazebo/launch/include/: spawn_create.launch  spawn_multirobot.launch
ca_gazebo/src/: create_virtual_wall_plugin.cpp
ca_gazebo/test/scripts/: tf_checker.py
ca_gazebo/worlds/: otafab1.world
ca_msgs/: CMakeLists.txt
ca_node/: CMakeLists.txt
ca_node/launch/: create_2.launch
ca_tools/launch/: keyboard_teleop.launch
ca_tools/rviz/: config.rviz
ca_vision/: CMakeLists.txt  package.xml
ca_vision/launch/: object_detection.launch
docker/: docker_utils.py  run
docker/create_ros_melodic/: Dockerfile
docker/create_ros_melodic_gazebo9/: Dockerfile
navigation/ca_behavior_tree/: CMakeLists.txt
navigation/ca_behavior_tree/config/: behavior_tree.xml
navigation/ca_behavior_tree/include/ca_behavior_tree/actions/: movebase_client.h
navigation/ca_behavior_tree/include/ca_behavior_tree/conditions/: is_battery_level_ok.h
navigation/ca_behavior_tree/src/: main.cpp
navigation/ca_behavior_tree/src/actions/: movebase_client.cpp
navigation/ca_behavior_tree/src/conditions/: is_battery_level_ok.cpp
navigation/ca_cartographer/launch/: mapping_cartographer.launch
navigation/ca_control/include/ca_control/: create_hw_interface.hpp
navigation/ca_control/launch/: control_common.launch
navigation/ca_hector/launch/: default_mapping2.launch
navigation/ca_mapping_exploration/launch/: explore_lite.launch
navigation/ca_move_base/: CMakeLists.txt  package.xml
navigation/ca_move_base/launch/: amcl.launch  amcl_create1.launch  lama_create1.launch  map_server.launch  move_base.launch  move_base_create1.launch  move_base_flex.launch  navigate.launch  navigate2.launch  octomap_mapping.launch
navigation/ca_safety_controller/: CMakeLists.txt  package.xml
navigation/ca_slam/launch/: depthimage_to_laserscan.launch  depthimage_to_laserscan_gazebo.launch  slam_gmapping.launch  slam_gmapping2.launch
navigation/ca_vel_mux/launch/: mux.launch
navigation/ca_visual_odometry/: CMakeLists.txt  package.xml
sensors/ca_camera/: CMakeLists.txt  README.md  package.xml
sensors/ca_camera/launch/: d435.launch  realsense_d435.launch  realsense_r200.launch  ydlidar_x2l.launch
