<?xml version="1.0"?>
<package format="2">
  <name>ca_vision</name>
  <version>0.0.1</version>
  <description>iRobot Create 2 package for Computer Vision tasks.</description>

  <maintainer email="eborghiorue@frba.utn.edu.ar">Emiliano Borghi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>darknet_ros</exec_depend>
</package>
