<?xml version="1.0"?>
<package format="2">
  <name>ca_move_base</name>
  <version>0.0.0</version>
  <description>Has navigations utilities</description>

  <maintainer email="emiliano.borghi@gmail.com">Emiliano Borghi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>move_base_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <exec_depend>amcl</exec_depend>
  <exec_depend>ca_bumper2pc</exec_depend>
  <exec_depend>ca_cartographer</exec_depend>
  <exec_depend>ca_hector</exec_depend>
  <exec_depend>ca_slam</exec_depend>
  <exec_depend>carrot_planner</exec_depend>
  <exec_depend>clear_costmap_recovery</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>iris_lama_ros</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>mbf_costmap_nav</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>octomap_server</exec_depend>
  <exec_depend>rotate_recovery</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>
  <exec_depend>tf</exec_depend>


</package>
